[package]
name = "apache_prometheus_exporter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apache_prometheus_exporter"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
hyper = { version = "0.14.27", default-features = false, features = ["http1", "server", "runtime"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
path-slash = "0.2.1"
prometheus-client = "0.21.2"
tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "rt", "signal"] }
